onestop-deploy/base/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: onestop
  labels:
    app: onestop
spec:
  ports:
    - port: 8080
      targetPort: 8080
      nodePort: 30077
      name: http-port
  type: NodePort
  selector:
    app: onestop
